--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ nav ul .dropdown:hover .sub-menu{
     position: absolute;
     list-style: none;
 }
-.Productimg{
+.productImage{
     height: 200px;
     object-fit: cover;
     width: 100%; 
